--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.3"
+  },
+  "dependencies": {
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.46.1"
   }
 }
