--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
+    "@iconify/svelte": "^4.0.2",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1"
   }
