--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@iconify/svelte": "^4.0.2",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.46.1",
+    "openai": "^4.73.1",
     "svelte-file-dropzone": "^2.0.9"
   }
 }
